--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">YoutubeDownloader</string>
+    <string name="usage_stats_exception_message">
+        Usage Stats permission must be granted in order to be able to access foreground packages.
+    </string>
 </resources>
