throw exception if null context is passed to c'tor

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="usage_stats_exception_message">
         Usage Stats permission must be granted in order to be able to access foreground packages.
     </string>
+    <string name="null_context_exception_message">
+        The context provided is null. Please make sure you pass a valid context.
+    </string>
 </resources>
